--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
   <title>Frontend Mentor | Blog preview card</title>
 </head>
 <body>
-
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+    <div class="card">
+      <img class="card__image" src="/images/illustration-article.svg" 
+        alt="Card Illustration" height="200" />
+      <div class="card__content">
+        <p class="card__status">Learning</p>
+        <p class="card__date">Published 21 Dec 2023</p>
+        <h1>HTML &amp; CSS foundations</h1>
+        <p class="card__body">These languages are the backbone of every 
+          website, defining structure, content, and presentation.</p>
+      </div>
+      <div class="card__portrait">
+        <img src="/images/image-avatar.webp" alt="Portrait" width="32">
+        <p>Greg Hooper</p>
+      </div>
+    </div>
+  </main>
+  <footer class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/ElDonPapa" target="_blank">ElDonPapa</a>.</p>
+  </footer>
 </body>
 </html>
